Fixed manifesto bottom not visible on iphones

--- a/frontend/core/src/main/webapp/landing/css/main.css
+++ b/frontend/core/src/main/webapp/landing/css/main.css
@@ -408,6 +408,7 @@ div.main {
 @media screen and (device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2){
   #manifesto-container{
     margin-top: 50px;
+    padding-bottom: 50px;
   }
 }
 
@@ -415,6 +416,7 @@ div.main {
 @media screen and (device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3){
   #manifesto-container{
     margin-top: 50px;
+    padding-bottom: 50px;
   }
 }
 
@@ -422,6 +424,7 @@ div.main {
 @media screen and (device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2){
   #manifesto-container{
     margin-top: 35px;
+    padding-bottom: 50px;
   }
 }
 
